clusters/cluster1/kubernetes/apps/auth/dex/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  namespace: auth
  labels:
    app.kubernetes.io/name: dex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: dex-biggs-dog-tls
      hosts:
        - dex.biggs.dog
  rules:
    - host: dex.biggs.dog
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dex
                port:
                  number: 80
